// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearErrors method restores html to original state 1`] = `
"
      <form>
        
        <div class="nhsuk-form-group"></div>
        
        <div class="nhsuk-form-group"></div>
        <div data-original-aria-describedby="foo" aria-describedby="foo"></div>
        <div data-original-aria-describedby="bar" aria-describedby="bar"></div>
      </form>
      "
`;

exports[`formError method correctly sets errors on radio fields 1`] = `
"<form data-test-id="feedback-content" action="/Feedback/SubmitFeedback" method="post" target="_blank" data-feedback-form="" autocomplete="off">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#feedback-choice-yes">test error message</a>
          </li>
        </ul>
      </div>
    </div>
<input type="hidden" name="UserId" value="c0604133-7150-442d-afbe-957f19902546">

<input type="hidden" name="PageData.Page" value="ModuleZero">
<input type="hidden" name="PageData.TxNumber" value="">
<input type="hidden" name="PageData.QuestionId" value="">
<input type="hidden" name="PageData.StartingPathwayNo" value="">
<input type="hidden" name="PageData.StartingPathwayTitle" value="">
<input type="hidden" name="PageData.Gender" value="Indeterminate">
<input type="hidden" name="PageData.Age" value="">
<input type="hidden" name="PageData.PathwayNo" value="">
<input type="hidden" name="PageData.PathwayTitle" value="">
<input type="hidden" name="PageData.DxCode" value="">
<input type="hidden" name="PageData.SearchString" value="">
<input type="hidden" name="PageData.Campaign" value="">
<input type="hidden" name="PageData.Source" value="">
<input type="hidden" name="PageData.StartUrl" value="default">

<div class="nhsuk-form-group nhsuk-form-group--error" data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset" aria-describedby=" feedback-choice-yes-error">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
      Does the page make sense?
    </legend><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="feedback-choice-yes-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> test error message
    </span>
    <div class="nhsuk-radios">
      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-yes" name="feedbackChoice" type="radio" value="yes">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-yes">Yes</label>
      </div>

      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-no" name="feedbackChoice" type="radio" value="no">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-no">No</label>
      </div>
    </div>
  </fieldset>
</div>

<div data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m nhsuk-u-margin-bottom-0" data-test-id="feedback-explanation-1">
      Tell us how to make this page easier to understand
    </legend>

    <br>

    <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="1200">
      <div class="nhsuk-form-group">
        <div class="app-callout app-callout--info" id="feedback-contact-warning">
          <p data-test-id="feedback-explanation-2">
            Do <strong>not</strong> leave any personal or contact information.
            No one will reply to requests for medical help or contact you.
          </p>
        </div>

        <label for="feedback-text" class="nhsuk-label">Your feedback</label>
        <textarea class="nhsuk-textarea nhsuk-js-character-count" id="feedback-text" name="Text" rows="5" data-test-id="feedback-textarea" aria-describedby="feedback-text-info" data-autosize=""></textarea>
      </div>

      <div class="nhsuk-hint nhsuk-character-count__message" id="feedback-text-info">
        You can enter up to 1200 characters
      </div>
    </div>
  </fieldset>

  <button data-test-id="send-feedback-button" data-event-trigger="click" data-event-value="Send feedback" class="nhsuk-button nhsuk-u-margin-bottom-2" type="submit">
    Send feedback
  </button>
  <p class="nhsuk-hint" data-feedback-nojs-message="">
    (Opens in a new tab or window)
  </p>
</div>
</form>"
`;

exports[`formError method correctly sets errors on textarea field 1`] = `
"<form data-test-id="feedback-content" action="/Feedback/SubmitFeedback" method="post" target="_blank" data-feedback-form="" autocomplete="off">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#feedback-text">test error message</a>
          </li>
        </ul>
      </div>
    </div>
<input type="hidden" name="UserId" value="c0604133-7150-442d-afbe-957f19902546">

<input type="hidden" name="PageData.Page" value="ModuleZero">
<input type="hidden" name="PageData.TxNumber" value="">
<input type="hidden" name="PageData.QuestionId" value="">
<input type="hidden" name="PageData.StartingPathwayNo" value="">
<input type="hidden" name="PageData.StartingPathwayTitle" value="">
<input type="hidden" name="PageData.Gender" value="Indeterminate">
<input type="hidden" name="PageData.Age" value="">
<input type="hidden" name="PageData.PathwayNo" value="">
<input type="hidden" name="PageData.PathwayTitle" value="">
<input type="hidden" name="PageData.DxCode" value="">
<input type="hidden" name="PageData.SearchString" value="">
<input type="hidden" name="PageData.Campaign" value="">
<input type="hidden" name="PageData.Source" value="">
<input type="hidden" name="PageData.StartUrl" value="default">

<div class="nhsuk-form-group" data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
      Does the page make sense?
    </legend>
    <div class="nhsuk-radios">
      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-yes" name="feedbackChoice" type="radio" value="yes">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-yes">Yes</label>
      </div>

      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-no" name="feedbackChoice" type="radio" value="no">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-no">No</label>
      </div>
    </div>
  </fieldset>
</div>

<div data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m nhsuk-u-margin-bottom-0" data-test-id="feedback-explanation-1">
      Tell us how to make this page easier to understand
    </legend>

    <br>

    <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="1200">
      <div class="nhsuk-form-group nhsuk-form-group--error">
        <div class="app-callout app-callout--info" id="feedback-contact-warning">
          <p data-test-id="feedback-explanation-2">
            Do <strong>not</strong> leave any personal or contact information.
            No one will reply to requests for medical help or contact you.
          </p>
        </div>

        <label for="feedback-text" class="nhsuk-label">Your feedback</label><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="feedback-text-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> test error message
    </span>
        <textarea class="nhsuk-textarea nhsuk-js-character-count" id="feedback-text" name="Text" rows="5" data-test-id="feedback-textarea" aria-describedby=" feedback-text-error" data-autosize=""></textarea>
      </div>

      <div class="nhsuk-hint nhsuk-character-count__message" id="feedback-text-info">
        You can enter up to 1200 characters
      </div>
    </div>
  </fieldset>

  <button data-test-id="send-feedback-button" data-event-trigger="click" data-event-value="Send feedback" class="nhsuk-button nhsuk-u-margin-bottom-2" type="submit">
    Send feedback
  </button>
  <p class="nhsuk-hint" data-feedback-nojs-message="">
    (Opens in a new tab or window)
  </p>
</div>
</form>"
`;

exports[`formError method correctly sets errors on textarea field with different error link relative to message 1`] = `
"<form data-test-id="feedback-content" action="/Feedback/SubmitFeedback" method="post" target="_blank" data-feedback-form="" autocomplete="off">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#feedback-text">test error link</a>
          </li>
        </ul>
      </div>
    </div>
<input type="hidden" name="UserId" value="c0604133-7150-442d-afbe-957f19902546">

<input type="hidden" name="PageData.Page" value="ModuleZero">
<input type="hidden" name="PageData.TxNumber" value="">
<input type="hidden" name="PageData.QuestionId" value="">
<input type="hidden" name="PageData.StartingPathwayNo" value="">
<input type="hidden" name="PageData.StartingPathwayTitle" value="">
<input type="hidden" name="PageData.Gender" value="Indeterminate">
<input type="hidden" name="PageData.Age" value="">
<input type="hidden" name="PageData.PathwayNo" value="">
<input type="hidden" name="PageData.PathwayTitle" value="">
<input type="hidden" name="PageData.DxCode" value="">
<input type="hidden" name="PageData.SearchString" value="">
<input type="hidden" name="PageData.Campaign" value="">
<input type="hidden" name="PageData.Source" value="">
<input type="hidden" name="PageData.StartUrl" value="default">

<div class="nhsuk-form-group" data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
      Does the page make sense?
    </legend>
    <div class="nhsuk-radios">
      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-yes" name="feedbackChoice" type="radio" value="yes">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-yes">Yes</label>
      </div>

      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-no" name="feedbackChoice" type="radio" value="no">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-no">No</label>
      </div>
    </div>
  </fieldset>
</div>

<div data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m nhsuk-u-margin-bottom-0" data-test-id="feedback-explanation-1">
      Tell us how to make this page easier to understand
    </legend>

    <br>

    <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="1200">
      <div class="nhsuk-form-group nhsuk-form-group--error">
        <div class="app-callout app-callout--info" id="feedback-contact-warning">
          <p data-test-id="feedback-explanation-2">
            Do <strong>not</strong> leave any personal or contact information.
            No one will reply to requests for medical help or contact you.
          </p>
        </div>

        <label for="feedback-text" class="nhsuk-label">Your feedback</label><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="feedback-text-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> test error message
    </span>
        <textarea class="nhsuk-textarea nhsuk-js-character-count" id="feedback-text" name="Text" rows="5" data-test-id="feedback-textarea" aria-describedby=" feedback-text-error" data-autosize=""></textarea>
      </div>

      <div class="nhsuk-hint nhsuk-character-count__message" id="feedback-text-info">
        You can enter up to 1200 characters
      </div>
    </div>
  </fieldset>

  <button data-test-id="send-feedback-button" data-event-trigger="click" data-event-value="Send feedback" class="nhsuk-button nhsuk-u-margin-bottom-2" type="submit">
    Send feedback
  </button>
  <p class="nhsuk-hint" data-feedback-nojs-message="">
    (Opens in a new tab or window)
  </p>
</div>
</form>"
`;

exports[`formError method correctly sets repeated errors on radio fields 1`] = `
"<form data-test-id="feedback-content" action="/Feedback/SubmitFeedback" method="post" target="_blank" data-feedback-form="" autocomplete="off">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#feedback-choice-yes">a third error message</a>
          </li>
        </ul>
      </div>
    </div>
    
    
<input type="hidden" name="UserId" value="c0604133-7150-442d-afbe-957f19902546">

<input type="hidden" name="PageData.Page" value="ModuleZero">
<input type="hidden" name="PageData.TxNumber" value="">
<input type="hidden" name="PageData.QuestionId" value="">
<input type="hidden" name="PageData.StartingPathwayNo" value="">
<input type="hidden" name="PageData.StartingPathwayTitle" value="">
<input type="hidden" name="PageData.Gender" value="Indeterminate">
<input type="hidden" name="PageData.Age" value="">
<input type="hidden" name="PageData.PathwayNo" value="">
<input type="hidden" name="PageData.PathwayTitle" value="">
<input type="hidden" name="PageData.DxCode" value="">
<input type="hidden" name="PageData.SearchString" value="">
<input type="hidden" name="PageData.Campaign" value="">
<input type="hidden" name="PageData.Source" value="">
<input type="hidden" name="PageData.StartUrl" value="default">

<div class="nhsuk-form-group nhsuk-form-group--error" data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset" aria-describedby=" feedback-choice-yes-error">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
      Does the page make sense?
    </legend><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="feedback-choice-yes-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> a third error message
    </span>
    <div class="nhsuk-radios">
      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-yes" name="feedbackChoice" type="radio" value="yes">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-yes">Yes</label>
      </div>

      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-no" name="feedbackChoice" type="radio" value="no">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-no">No</label>
      </div>
    </div>
  </fieldset>
</div>

<div data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m nhsuk-u-margin-bottom-0" data-test-id="feedback-explanation-1">
      Tell us how to make this page easier to understand
    </legend>

    <br>

    <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="1200">
      <div class="nhsuk-form-group">
        <div class="app-callout app-callout--info" id="feedback-contact-warning">
          <p data-test-id="feedback-explanation-2">
            Do <strong>not</strong> leave any personal or contact information.
            No one will reply to requests for medical help or contact you.
          </p>
        </div>

        <label for="feedback-text" class="nhsuk-label">Your feedback</label>
        <textarea class="nhsuk-textarea nhsuk-js-character-count" id="feedback-text" name="Text" rows="5" data-test-id="feedback-textarea" aria-describedby="feedback-text-info" data-autosize=""></textarea>
      </div>

      <div class="nhsuk-hint nhsuk-character-count__message" id="feedback-text-info">
        You can enter up to 1200 characters
      </div>
    </div>
  </fieldset>

  <button data-test-id="send-feedback-button" data-event-trigger="click" data-event-value="Send feedback" class="nhsuk-button nhsuk-u-margin-bottom-2" type="submit">
    Send feedback
  </button>
  <p class="nhsuk-hint" data-feedback-nojs-message="">
    (Opens in a new tab or window)
  </p>
</div>
</form>"
`;

exports[`formError method correctly sets repeated errors on textarea fields 1`] = `
"<form data-test-id="feedback-content" action="/Feedback/SubmitFeedback" method="post" target="_blank" data-feedback-form="" autocomplete="off">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#feedback-text">a third error message</a>
          </li>
        </ul>
      </div>
    </div>
    
    
<input type="hidden" name="UserId" value="c0604133-7150-442d-afbe-957f19902546">

<input type="hidden" name="PageData.Page" value="ModuleZero">
<input type="hidden" name="PageData.TxNumber" value="">
<input type="hidden" name="PageData.QuestionId" value="">
<input type="hidden" name="PageData.StartingPathwayNo" value="">
<input type="hidden" name="PageData.StartingPathwayTitle" value="">
<input type="hidden" name="PageData.Gender" value="Indeterminate">
<input type="hidden" name="PageData.Age" value="">
<input type="hidden" name="PageData.PathwayNo" value="">
<input type="hidden" name="PageData.PathwayTitle" value="">
<input type="hidden" name="PageData.DxCode" value="">
<input type="hidden" name="PageData.SearchString" value="">
<input type="hidden" name="PageData.Campaign" value="">
<input type="hidden" name="PageData.Source" value="">
<input type="hidden" name="PageData.StartUrl" value="default">

<div class="nhsuk-form-group" data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
      Does the page make sense?
    </legend>
    <div class="nhsuk-radios">
      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-yes" name="feedbackChoice" type="radio" value="yes">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-yes">Yes</label>
      </div>

      <div class="nhsuk-radios__item">
        <input class="nhsuk-radios__input" id="feedback-choice-no" name="feedbackChoice" type="radio" value="no">
        <label class="nhsuk-label nhsuk-radios__label" for="feedback-choice-no">No</label>
      </div>
    </div>
  </fieldset>
</div>

<div data-feedback-form-section="">
  <fieldset class="nhsuk-fieldset">
    <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m nhsuk-u-margin-bottom-0" data-test-id="feedback-explanation-1">
      Tell us how to make this page easier to understand
    </legend>

    <br>

    <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="1200">
      <div class="nhsuk-form-group nhsuk-form-group--error">
        <div class="app-callout app-callout--info" id="feedback-contact-warning">
          <p data-test-id="feedback-explanation-2">
            Do <strong>not</strong> leave any personal or contact information.
            No one will reply to requests for medical help or contact you.
          </p>
        </div>

        <label for="feedback-text" class="nhsuk-label">Your feedback</label><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="feedback-text-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> a third error message
    </span>
        <textarea class="nhsuk-textarea nhsuk-js-character-count" id="feedback-text" name="Text" rows="5" data-test-id="feedback-textarea" aria-describedby=" feedback-text-error" data-autosize=""></textarea>
      </div>

      <div class="nhsuk-hint nhsuk-character-count__message" id="feedback-text-info">
        You can enter up to 1200 characters
      </div>
    </div>
  </fieldset>

  <button data-test-id="send-feedback-button" data-event-trigger="click" data-event-value="Send feedback" class="nhsuk-button nhsuk-u-margin-bottom-2" type="submit">
    Send feedback
  </button>
  <p class="nhsuk-hint" data-feedback-nojs-message="">
    (Opens in a new tab or window)
  </p>
</div>
</form>"
`;

exports[`hideAllFormSections method hides all form sections 1`] = `
"
      <form>
        <div data-feedback-form-section="" hidden=""></div>
        <div data-feedback-form-section="" hidden=""></div>
      </form>
      "
`;

exports[`hideNoJsMessage method hides any no-js messages in the form 1`] = `
"
        <form>
          
          <p>Normal paragraph</p>
          
        </form>
      "
`;

exports[`trackOriginalAria method stores original aria-describedby attributes on a temporary data attribute for later use 1`] = `
"
        <form>
          <fieldset aria-describedby="fieldset" data-original-aria-describedby="fieldset">
            <input aria-describedby="input" data-original-aria-describedby="input">
            <textarea aria-describedby="textarea" data-original-aria-describedby="textarea"></textarea>
          </fieldset>

          <fieldset aria-describedby="fieldset2" data-original-aria-describedby="fieldset2">
            <input aria-describedby="input2" data-original-aria-describedby="input2">
            <textarea aria-describedby="textarea2" data-original-aria-describedby="textarea2"></textarea>
          </fieldset>
        </form>
      "
`;
